# yt-grab

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: error.rs  main.rs
src/cli/: args.rs  interactive.rs
src/core/: downloader.rs  mod.rs  playlist.rs  range_parser.rs
src/model/: config.rs  format.rs  mod.rs  video.rs
